# MoMify

./: .gitignore  README.md  meson.build  pyproject.toml
.github/workflows/: wheels.yml
momify/: __main__.py  cli.py  meson.build  momify.py  summarize.py
momify/loopback/: Common.h  FindProcess.cpp  LoopbackCapture.cpp  LoopbackCapture.h  Record.cpp  meson.build
momify/loopback/wil/: .editorconfig
momify/utils/: __init__.py  meson.build  summarize.py  transcribe.py
