[build-system]
requires = ["meson-python", "pybind11"]
build-backend = "mesonpy"

[project]
name = 'momify'
version = '0.0.2'
description = 'A tool for seamlessly summarizing your boring meetings!'
requires-python = '>=3.10'
authors = [
  {name = 'Athirah Hazwani'},
  {name = 'Anthony Loumakos'}
]
dependencies = [
  "typer"
]

[project.scripts]
momify = "momify.cli:app"

