[build-system]
requires = ["meson-python", "pybind11"]
build-backend = "mesonpy"

[project]
name = 'momify'
version = '0.0.3'
description = 'A tool for seamlessly summarizing your boring meetings!'
requires-python = '>=3.8'
authors = [
  {name = 'Athirah Hazwani'}
]
dependencies = [
  "typer",
  "transformers",
  "accelerate"
]

[project.scripts]
momify = "momify.cli:app"

