[build-system]
requires = ["meson-python", "pybind11"]
build-backend = "mesonpy"

[project]
name = 'momify'
version = '0.0.13'
description = 'A tool for seamlessly summarizing your boring meetings!'
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = '>=3.8'
authors = [
  {name = 'Athirah Hazwani'}
]
dependencies = [
  "typer",
  "transformers",
  "accelerate"
]

[project.urls]
source = "https://github.com/xyzinabox/MoMify"

[project.scripts]
momify = "momify.cli:app"

